# tetrad

./: CMakeLists.txt  How To Build Tetrad - Read This First.docx  buildboost.bat  buildios.sh  buildwindows8.ps1  cmake_install.cmake  staticCRT.cmake
Base64/: Base64.cpp  Base64.h  CMakeLists.txt  b64.h  sources.cmake
Base64/StaticCRT/: CMakeLists.txt
CLI/: CMakeLists.txt  ConsoleView.cpp  cmake_install.cmake  stdafx.cpp  stdafx.h  targetver.h
Engine/: CMakeLists.txt  Definitions.h  Engine.cpp  EnumIterators.cpp  EventNotifier.cpp  EventNotifier.h  Exceptions.h  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  GameMechanics.cpp  GameMechanics.h  GameMechanicsUtil.cpp  GameMechanicsUtil.h  GuidCreator.h  Interfaces.h  JsonSerializable.h  JsonSerializeUtil.cpp  JsonSerializeUtil.h  Logger.h  Move.h  MoveGenerator.cpp  MoveGenerator.h  MutexObject.cpp  MutexObject.h  Player.cpp  Player.h  TetradFinder.cpp  TetradFinder.h  cmake_install.cmake  sources.cmake  stdafx.h
Engine/StaticCRT/: CMakeLists.txt
EngineTest/: CMakeLists.txt  TestGameFlip.cpp  TestGameSerialize.cpp  TestMoveFlip.cpp  TestMoveSerialize.cpp  TestPlayerSerialize.cpp  TestRunner.cpp  TestTileFlip.cpp  TestTileSerialize.cpp
JsonSpirit/: CMakeLists.txt  sources.cmake
JsonSpirit/StaticCRT/: CMakeLists.txt
MattSux/: MattSux.csproj  Program.cs
SlickEdit/: tetrad.vpj  tetrad.vpw
Stats/: CMakeLists.txt  GameData.cpp  GameData.h  StatsCalculator.cpp  StatsCalculator.h  sources.cmake  stdafx.cpp  targetver.h
TetraSlide.Win8/: InstallTetraSlide.bat  TetraSlide.Win8.sln
WPF/: App.xaml  App.xaml.cs  AuthTokenLoader.cs  AuthTokenView.xaml  AuthTokenView.xaml.cs  Board.cs  ColorSelection.xaml  ColorSelection.xaml.cs  CustomConverters.cs  DifficultySelection.xaml  DifficultySelection.xaml.cs  EventArgs.cs  Exceptions.cs  GameManager.cs  GameView.xaml  GameView.xaml.cs  GameViewModel.cs  GameViewModel2.cs  InvitePlayerView.xaml  InvitePlayerView.xaml.cs  Logger.cs  Main.xaml  Main.xaml.cs  MainMenu.xaml  MainMenu.xaml.cs  MessageView.xaml  MessageView.xaml.cs  Model.cs  MoveResults.cs  MultiplayerTypeSelection.xaml  MultiplayerTypeSelection.xaml.cs  Navigator.cs  OutlinedText.cs  PlayerInfo.xaml  PlayerInfo.xaml.cs  PlayerViewModel.cs  RelayCommand.cs  SoundManager.cs  Tetrad.cs  ThreadSyncronizer.cs  (+8 more)
WebService/: DeveloperGuide.doc  TetraSlideWebService.sln
(+276 files in other folders)
